# icu4c

./: .gitignore  0001-Make-CMakeLists.txt-path-abs.patch  0002-Fix-include-path.patch  0003-Patch-characters.patch  CMakeLists.txt  README.md  u_data.json  update.py  update.sh
common/: ucasemap.cpp  uchar.cpp  ustrcase.cpp
i18n/: uspoof_impl.cpp
